# retrodetect

./: README.md  pyproject.toml
.github/workflows/: python-package-publishing.yml  python-package.yml
examples/: Demo.ipynb
retrodetect/: __init__.py  normxcorr2.py
src/retrodetect/: __init__.py  __main__.py  detect.py  retrodetect.py
src/retrodetect/image_processing/: __init__.py  image_processing.py
tests/: test_detect.py  test_retrodetect.py  testing.ipynb
tests/data/sessionA/setA/cam5/02D49634733/: 20200805_11+59+03.206111.0019_000001.np
